--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Cortex by SCTE / ISBE",
   "dependencies": {
     "angular-moment": "^1.0.0-beta.6",
+    "cordova-plugin-whitelist": "^1.2.2",
     "gulp": "^3.5.6",
     "gulp-concat": "^2.2.0",
     "gulp-minify-css": "^0.3.0",
