--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,8 @@
   "name": "HelloIonic",
   "private": "true",
   "devDependencies": {
-    "ionic": "driftyco/ionic-bower#1.2.0"
+    "ionic": "driftyco/ionic-bower#1.2.0",
+    "ionic-platform-web-client": "^0.7.1"
   },
   "dependencies": {
     "ionic-ion-tinder-cards": "*",
