--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
     "holderjs": "^2.9.3",
     "angular-holderjs": "^1.1.0",
     "angular-moment": "^0.10.3",
-    "lodash": "^4.12.0"
+    "lodash": "^4.12.0",
+    "ion-alpha-scroll": "^0.1.3"
   }
 }
