--- a/bower.json
+++ b/bower.json
@@ -1,17 +1,18 @@
 {
-  "name": "HelloIonic",
-  "private": "true",
-  "devDependencies": {
-    "ionic": "driftyco/ionic-bower#1.2.0",
-    "ionic-platform-web-client": "^0.7.1"
-  },
-  "dependencies": {
+"name": "HelloIonic",
+"private":"true",
+"devDependencies":{
+"ionic":"driftyco/ionic-bower#1.2.0"
+},
+"dependencies":{
     "ionic-ion-tinder-cards": "*",
     "angular-tabletop": "^0.2.2",
     "holderjs": "^2.9.3",
     "angular-holderjs": "^1.1.0",
     "angular-moment": "^0.10.3",
     "lodash": "^4.12.0",
-    "ion-alpha-scroll": "^0.1.3"
+    "ion-alpha-scroll": "^0.1.3",
+    "ionic-ratings": "^0.2.0",
+"ionic-datepicker": "^1.1.0"
   }
 }
