--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "cordova-plugin-whitelist",
     "cordova-plugin-splashscreen",
     "cordova-plugin-statusbar",
-    "ionic-plugin-keyboard",
-    "ionic-plugin-deploy"
+    "ionic-plugin-keyboard"
   ],
   "cordovaPlatforms": [
     "ios",
