--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,11 @@
 {
-"name": "HelloIonic",
-"private":"true",
-"devDependencies":{
-"ionic":"driftyco/ionic-bower#1.2.0"
-},
-"dependencies":{
+  "name": "HelloIonic",
+  "private": "true",
+  "devDependencies": {
+    "ionic": "driftyco/ionic-bower#1.2.0",
+    "ionic-platform-web-client": "^0.7.1"
+  },
+  "dependencies": {
     "ionic-ion-tinder-cards": "*",
     "angular-tabletop": "^0.2.2",
     "holderjs": "^2.9.3",
@@ -13,6 +14,6 @@
     "lodash": "^4.12.0",
     "ion-alpha-scroll": "^0.1.3",
     "ionic-ratings": "^0.2.0",
-"ionic-datepicker": "^1.1.0"
+    "ionic-datepicker": "^1.1.0"
   }
 }
