--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
     "lodash": "^4.12.0",
     "ion-alpha-scroll": "^0.1.3",
     "ionic-ratings": "^0.2.0",
-    "ionic-datepicker": "^1.1.0"
+    "ionic-datepicker": "^1.1.0",
+    "ngstorage": "^0.3.10"
   }
 }
