--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,8 @@
   "private": "true",
   "devDependencies": {
     "ionic": "driftyco/ionic-bower#1.2.0",
-    "ionic-platform-web-client": "^0.7.1"
+    "ionic-platform-web-client": "^0.7.1",
+    "platform.js": "platform#^1.3.1"
   },
   "dependencies": {
     "ionic-ion-tinder-cards": "*",
