--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,8 @@
   "devDependencies": {
     "ionic": "driftyco/ionic-bower#1.2.0",
     "ionic-platform-web-client": "^0.7.1",
-    "platform.js": "platform#^1.3.1"
+    "platform.js": "platform#^1.3.1",
+    "plugin": "^3.1.0"
   },
   "dependencies": {
     "ionic-ion-tinder-cards": "*",
