--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
       "locator": "https://github.com/katzer/cordova-plugin-email-composer.git",
       "id": "cordova-plugin-email-composer"
     },
-    "cordova-plugin-calendar"
+    "cordova-plugin-calendar",
+    "cordova-plugin-network-information"
   ],
   "cordovaPlatforms": [
     "ios",
