--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
       "locator": "https://github.com/katzer/cordova-plugin-email-composer.git",
       "id": "cordova-plugin-email-composer"
     },
-    "cordova-plugin-calendar"
+    "cordova-plugin-calendar",
+    "cordova-plugin-crosswalk-webview"
   ],
   "cordovaPlatforms": [
     "android",
