--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "bower": "^1.3.3",
+    "del": "^2.2.2",
     "gulp-util": "^2.2.14",
     "shelljs": "^0.3.0"
   },
