--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
     "gulp-minify-css": "^0.3.0",
     "gulp-rename": "^1.2.0",
     "gulp-sass": "^2.0.4",
-    "moment": "^2.13.0"
-  },
-  "devDependencies": {
+    "moment": "^2.13.0",
     "bower": "^1.3.3",
     "del": "^2.2.2",
     "gulp-util": "^2.2.14",
